--- a/style.css
+++ b/style.css
@@ -5,16 +5,19 @@
 
 body{
     font-family: 'Oxygen', sans-serif;
+    background-color: rgb(220, 227, 234);
+    position: relative;
 }
 
 header{
     background-color: rgb(122, 41, 197);
     text-align: center;
     padding-bottom: 1%;
+    box-shadow: 5px 6px 20px 2px rgb(37, 36, 36);
 }
 
 .titulo{
-    font-size: 50px;
+    font-size: 55px;
     padding: 2%;
     color: aliceblue;
     background-color: rgb(92, 26, 154);
@@ -25,4 +28,84 @@ header{
     margin: 8%;
     text-decoration: none;
     color: aliceblue;
+}
+
+.menu:hover{
+    color: rgb(177, 50, 232);
+    font-size: 46px;
+    transition: 0.3s;
+}
+
+.conteudo-principal{
+    display: flex;
+}
+
+.texto-principal{
+    width: 30%;
+    color: aliceblue;
+    background-color: rgb(114, 59, 165);
+    margin: 3% 0 0 13%;
+    padding: 1% 3% 1% 1%;
+    border-radius: 16px;
+    box-shadow: 5px 6px 20px 2px rgb(37, 36, 36);
+}
+
+.texto-principal p{
+    font-size: 26px;
+    padding-top: 5%;
+}
+
+.vinho{
+    width: 40%;
+    margin-top: 3%;
+    margin-left: 7%;
+    border-radius: 16px;
+    box-shadow: 5px 6px 20px 2px rgb(37, 36, 36);
+}
+
+footer{
+    bottom: 0;
+    margin-top: 3%;
+    padding: 2%;
+    font-size: 20px;
+    color: aliceblue;
+    background-color: rgb(122, 41, 197);
+    text-align: center;
+    width: 100%;
+}
+
+/*Página Contato*/
+
+.formulario{
+    display: grid;
+    width: 23%;
+    font-size: 30px;
+    margin-left: 40%;
+    margin-top: 2%;
+    padding-bottom: 4%;
+}
+
+.categoria{
+    margin: 3%;
+}
+
+button{
+    margin-top: 10%;
+    font-size: 20px;
+    border-radius: 20px;
+    background-color: rgb(139, 64, 208);
+    color: aliceblue;
+    padding: 1%;
+}
+
+button:hover{
+    font-size: 21px;
+    transition: 0.3s;
+    background-color: rgb(155, 96, 211);
+}
+
+input{
+    border-radius: 20px;
+    padding-left: 1%;
+    font-size: 20px;
 }
