--- a/style.css
+++ b/style.css
@@ -218,6 +218,7 @@ button{
     background-color: rgb(139, 64, 208);
     color: aliceblue;
     padding: 1%;
+    cursor: pointer;
 }
 
 button:hover{
@@ -230,4 +231,67 @@ input{
     border-radius: 20px;
     padding-left: 1%;
     font-size: 20px;
+}
+
+/*Página Quiz*/
+
+.apresentacao-quiz{
+    width: 30%;
+    color: aliceblue;
+    background-color: rgb(114, 59, 165);
+    margin: 3% 0 0 3%;
+    padding: 1% 3% 1% 1%;
+    border-radius: 16px;
+    box-shadow: 5px 6px 20px 2px rgb(37, 36, 36);
+}
+
+.quiz {
+    width: 600px;
+    margin: 0 auto;
+    font-family: Arial, sans-serif;
+}
+
+.question {
+    width: 30%;
+    font-size: 55px;
+    width: 30%;
+    color: aliceblue;
+    background-color: rgb(114, 59, 165);
+    margin: 3% 0 0 13%;
+    padding: 1% 3% 1% 1%;
+    border-radius: 16px;
+    box-shadow: 5px 6px 20px 2px rgb(37, 36, 36);
+}
+
+.options {
+    width: 30%;
+    color: aliceblue;
+    background-color: rgb(114, 59, 165);
+    margin: 3% 0 0 13%;
+    padding: 1% 3% 1% 1%;
+    border-radius: 16px;
+    box-shadow: 5px 6px 20px 2px rgb(37, 36, 36);
+}
+
+.option {
+    width: 30%;
+    color: aliceblue;
+    background-color: rgb(114, 59, 165);
+    margin: 3% 0 0 13%;
+    padding: 1% 3% 1% 1%;
+    border-radius: 16px;
+    box-shadow: 5px 6px 20px 2px rgb(37, 36, 36);
+}
+
+.option:hover {
+    background-color: #ddd;
+}
+
+.duas-perguntas{
+    display: flex;
+    margin-right: 5%;
+}
+
+.conteudo-quiz{
+    display: block;
 }
